[gd_scene load_steps=24 format=3 uid="uid://pdsmhnyf32ff"]

[ext_resource type="Script" path="res://TestFolder/test_room.gd" id="1_t0hgf"]
[ext_resource type="PackedScene" uid="uid://clqeb6tryrvq1" path="res://TestFolder/Entities/test_player/test_player.tscn" id="2_sbuxf"]
[ext_resource type="PackedScene" uid="uid://cw1828ppx7y0g" path="res://TestFolder/3rdPersonCamera.tscn" id="3_x1hcy"]
[ext_resource type="PackedScene" uid="uid://b4qhy2cgu6a1e" path="res://TestFolder/Entities/test_enemy/test_enemy.tscn" id="4_y0odl"]
[ext_resource type="PackedScene" uid="uid://b5pltiha5qm3x" path="res://TestFolder/UI/MainScreenUI.tscn" id="6_tx08o"]
[ext_resource type="PackedScene" uid="uid://dwlxbgtfsp2td" path="res://TestFolder/UI/PauseMenu.tscn" id="6_wypbr"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_qkw2q"]
sky_top_color = Color(0.352283, 0.715816, 0.968309, 1)
sky_horizon_color = Color(0.818692, 0.715279, 0.58565, 1)
sky_curve = 0.235375
ground_bottom_color = Color(0.4161, 0.306255, 0.233211, 1)
ground_horizon_color = Color(0.819608, 0.713726, 0.584314, 1)

[sub_resource type="Sky" id="Sky_i6nm7"]
sky_material = SubResource("ProceduralSkyMaterial_qkw2q")

[sub_resource type="Environment" id="Environment_pb6gs"]
background_mode = 2
sky = SubResource("Sky_i6nm7")
ambient_light_source = 3
ambient_light_color = Color(0.814219, 0.87229, 0.896943, 1)

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_w2q8t"]
plane = Plane(0, -1, 0, 0)

[sub_resource type="BoxMesh" id="BoxMesh_1n2po"]
flip_faces = true
size = Vector3(100, 100, 100)

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_4yore"]
plane = Plane(0, 0, -1, 0)

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_0a1yg"]
plane = Plane(0, 0, 1, 0)

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_uu5r2"]
plane = Plane(1, 0, 0, 0)

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_pq1m8"]
plane = Plane(-1, 0, 0, 0)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6sti3"]
shading_mode = 0
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="SphereMesh" id="SphereMesh_2n052"]
material = SubResource("StandardMaterial3D_6sti3")
radius = 3.0
height = 10.0

[sub_resource type="NavigationMesh" id="NavigationMesh_sxn66"]
vertices = PackedVector3Array(-50, 0.146985, -0.799999, -12.8, 0.146985, -0.799999, -12.7, 0.146985, -1.8, -12.4, 0.146985, -2, -11.6, 0.146985, -50, -50, 0.146985, -50, -11.6, 0.146985, -2, -9.9, 0.146985, -2, -9.9, 0.146985, -50, -8.7, 0.146985, -1.6, -8.7, 0.146985, -0.899998, -8.2, 0.146985, -0.899998, -8.2, 0.146985, -1.6, -8.9, 0.146985, -1.9, -8, 0.146985, -1.9, -7, 0.146985, -2, -7, 0.146985, -50, -5.3, 0.146985, -2, -5.3, 0.146985, -50, -4.4, 0.146985, -1.9, 12.6, 0.246985, -3.4, 12.7, 0.146985, -3.9, 13.7, 0.146985, -50, 13.7, 0.146985, -4, 31.1, 0.146985, -3.6, 31.1, 0.146985, -3, 34, 0.146985, -3.1, 30.7, 0.146985, -4, 34, 0.146985, -7.3, 34.4, 0.146985, -7.7, 50, 0.146985, -7.7, 50, 0.146985, -50, 33.8, 8.74698, -3, 33.8, 8.74698, 3, 34.6, 9.04698, 3, 34.6, 9.04698, -3, 35, 9.04698, 3.4, 35, 9.04698, 6.7, 52, 9.04698, 6.7, 35, 9.04698, -3.4, 52, 9.04698, -6.7, 35, 9.04698, -6.7, 35.1, 0.146985, -6.6, 35.1, 0.146985, 6.6, 50, 0.146985, 6.6, 50, 0.146985, -6.6, -4.1, 0.146985, -1.5, 12.8, 0.346985, -3.1, 12.2172, 0.146985, -3.04483, 12.8, 0.346985, 3.1, 13.7, 0.646985, 3, 13.7, 0.646985, -3, -4.2, 0.146985, 1.8, 12.2138, 0.146985, 3.05518, 31.1, 0.146985, 3, 34, 0.146985, 3.1, -11.8, 1.64698, -1, -11.8, 1.64698, 1, -9.7, 1.64698, 1, -9.7, 1.64698, -1, -7.2, 1.64698, -1, -7.2, 1.64698, 1, -5.1, 1.64698, 1, -5.1, 1.64698, -1, -8.2, 0.146985, 1.7, -8.7, 0.146985, 1.7, -9.1, 0.146985, 2.1, -9.6, 0.146985, 50, -7.3, 0.146985, 50, -7.8, 0.146985, 2.1, -7.2, 0.146985, 2.1, -9.7, 0.146985, 2.1, -50, 0.146985, 0.900002, -12.8, 0.146985, 0.900002, -12.7, 0.146985, 1.9, -12.4, 0.146985, 2.1, -50, 0.146985, 50, -11.9, 0.146985, 50, -11.8, 0.146985, 2.1, 12.7, 0.246985, 3.2, -4.4, 0.146985, 2, 12.7, 0.146985, 3.9, -5.1, 0.146985, 2.1, -5, 0.146985, 50, 13.7, 0.146985, 50, 13.7, 0.146985, 4, 31.1, 0.146985, 3.6, 30.7, 0.146985, 4, 34, 0.146985, 7.3, 50, 0.146985, 50, 50, 0.146985, 7.7, 34.4, 0.146985, 7.7)
polygons = [PackedInt32Array(2, 1, 0), PackedInt32Array(2, 0, 3), PackedInt32Array(3, 0, 5), PackedInt32Array(3, 5, 4), PackedInt32Array(3, 4, 6), PackedInt32Array(4, 8, 6), PackedInt32Array(6, 8, 7), PackedInt32Array(12, 11, 9), PackedInt32Array(9, 11, 10), PackedInt32Array(13, 7, 14), PackedInt32Array(14, 7, 15), PackedInt32Array(15, 7, 8), PackedInt32Array(15, 8, 16), PackedInt32Array(9, 13, 12), PackedInt32Array(12, 13, 14), PackedInt32Array(16, 18, 15), PackedInt32Array(15, 18, 17), PackedInt32Array(20, 19, 21), PackedInt32Array(21, 19, 17), PackedInt32Array(21, 17, 18), PackedInt32Array(21, 18, 22), PackedInt32Array(22, 23, 21), PackedInt32Array(26, 25, 24), PackedInt32Array(24, 27, 26), PackedInt32Array(26, 27, 28), PackedInt32Array(31, 30, 29), PackedInt32Array(28, 27, 23), PackedInt32Array(28, 23, 29), PackedInt32Array(29, 23, 22), PackedInt32Array(29, 22, 31), PackedInt32Array(35, 34, 32), PackedInt32Array(32, 34, 33), PackedInt32Array(38, 37, 36), PackedInt32Array(35, 39, 34), PackedInt32Array(34, 39, 36), PackedInt32Array(36, 39, 38), PackedInt32Array(38, 39, 40), PackedInt32Array(39, 41, 40), PackedInt32Array(45, 44, 42), PackedInt32Array(42, 44, 43), PackedInt32Array(47, 48, 20), PackedInt32Array(20, 48, 46), PackedInt32Array(20, 46, 19), PackedInt32Array(47, 51, 48), PackedInt32Array(48, 51, 50), PackedInt32Array(48, 50, 49), PackedInt32Array(48, 49, 53), PackedInt32Array(48, 53, 46), PackedInt32Array(46, 53, 52), PackedInt32Array(25, 26, 54), PackedInt32Array(54, 26, 55), PackedInt32Array(51, 32, 50), PackedInt32Array(50, 32, 33), PackedInt32Array(59, 58, 56), PackedInt32Array(56, 58, 57), PackedInt32Array(63, 62, 60), PackedInt32Array(60, 62, 61), PackedInt32Array(65, 10, 64), PackedInt32Array(64, 10, 11), PackedInt32Array(65, 64, 66), PackedInt32Array(66, 64, 69), PackedInt32Array(66, 69, 68), PackedInt32Array(66, 68, 67), PackedInt32Array(68, 69, 70), PackedInt32Array(67, 71, 66), PackedInt32Array(0, 1, 72), PackedInt32Array(72, 1, 73), PackedInt32Array(72, 73, 74), PackedInt32Array(74, 75, 72), PackedInt32Array(72, 75, 76), PackedInt32Array(76, 75, 77), PackedInt32Array(77, 75, 78), PackedInt32Array(49, 79, 53), PackedInt32Array(53, 79, 52), PackedInt32Array(52, 79, 80), PackedInt32Array(80, 79, 81), PackedInt32Array(80, 81, 82), PackedInt32Array(82, 81, 83), PackedInt32Array(83, 81, 84), PackedInt32Array(81, 85, 84), PackedInt32Array(78, 71, 77), PackedInt32Array(77, 71, 67), PackedInt32Array(70, 82, 68), PackedInt32Array(68, 82, 83), PackedInt32Array(86, 54, 55), PackedInt32Array(86, 55, 87), PackedInt32Array(87, 55, 88), PackedInt32Array(91, 90, 89), PackedInt32Array(85, 87, 88), PackedInt32Array(88, 91, 85), PackedInt32Array(85, 91, 84), PackedInt32Array(84, 91, 89)]
geometry_parsed_geometry_type = 1
cell_size = 0.1
cell_height = 0.1
agent_height = 4.0

[sub_resource type="BoxShape3D" id="BoxShape3D_gyvdi"]
size = Vector3(101, 1, 101)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_843n5"]
albedo_color = Color(0.252058, 0.335722, 0.441584, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_xffg6"]
material = SubResource("StandardMaterial3D_843n5")
size = Vector2(101, 101)

[sub_resource type="BoxShape3D" id="BoxShape3D_o7tkx"]
size = Vector3(3, 3, 3)

[sub_resource type="BoxMesh" id="BoxMesh_ceuaj"]
size = Vector3(3, 3, 3)

[node name="TestRoom" type="Node3D" node_paths=PackedStringArray("healthBarUI", "pauseMenu")]
process_mode = 3
script = ExtResource("1_t0hgf")
healthBarUI = NodePath("Pausable/MainScreenUI")
pauseMenu = NodePath("WhenPaused/PauseMenu")

[node name="LightingAndEnvironment" type="Node" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="LightingAndEnvironment"]
environment = SubResource("Environment_pb6gs")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="LightingAndEnvironment"]
transform = Transform3D(1, 0, 0, 0, 0.439516, 0.898235, 0, -0.898235, 0.439516, 0, 16.7335, 0)
light_color = Color(0.515113, 0.616325, 0.661462, 1)
light_energy = 3.0
shadow_enabled = true
directional_shadow_blend_splits = true

[node name="Pausable" type="Node" parent="."]
process_mode = 1

[node name="SpringArm3D" parent="Pausable" instance=ExtResource("3_x1hcy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.2614, 1, 4.89219)

[node name="Player" parent="Pausable" node_paths=PackedStringArray("spring_arm") instance=ExtResource("2_sbuxf")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.2614, 1, 4.89219)
spring_arm = NodePath("../SpringArm3D")

[node name="Enemy" parent="Pausable" instance=ExtResource("4_y0odl")]
unique_name_in_owner = true
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.464539, 0, -4.28519)

[node name="StaticBody3D" type="StaticBody3D" parent="Pausable"]

[node name="CollisionCeiling" type="CollisionShape3D" parent="Pausable/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 50, 0)
shape = SubResource("WorldBoundaryShape3D_w2q8t")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Pausable/StaticBody3D"]
mesh = SubResource("BoxMesh_1n2po")

[node name="CollisionWall1" type="CollisionShape3D" parent="Pausable/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 50)
shape = SubResource("WorldBoundaryShape3D_4yore")

[node name="CollisionWall2" type="CollisionShape3D" parent="Pausable/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -50)
shape = SubResource("WorldBoundaryShape3D_0a1yg")

[node name="CollisionWall3" type="CollisionShape3D" parent="Pausable/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -50, 0, 0)
shape = SubResource("WorldBoundaryShape3D_uu5r2")

[node name="CollisionWall4" type="CollisionShape3D" parent="Pausable/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 50, 0, 0)
shape = SubResource("WorldBoundaryShape3D_pq1m8")

[node name="Enterance" type="MeshInstance3D" parent="Pausable/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 0.01, 0, 0, 50)
mesh = SubResource("SphereMesh_2n052")

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="Pausable"]
navigation_mesh = SubResource("NavigationMesh_sxn66")

[node name="Floor" type="Node3D" parent="Pausable/NavigationRegion3D"]

[node name="Floor" type="StaticBody3D" parent="Pausable/NavigationRegion3D/Floor"]
collision_mask = 15

[node name="CollisionShape3D" type="CollisionShape3D" parent="Pausable/NavigationRegion3D/Floor/Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
shape = SubResource("BoxShape3D_gyvdi")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Pausable/NavigationRegion3D/Floor/Floor"]
mesh = SubResource("PlaneMesh_xffg6")
skeleton = NodePath("../..")

[node name="Node3D" type="Node3D" parent="Pausable/NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.17579, 0, 0)
metadata/_edit_group_ = true

[node name="StaticBody3D" type="StaticBody3D" parent="Pausable/NavigationRegion3D/Node3D"]
collision_layer = 15

[node name="CollisionShape3D" type="CollisionShape3D" parent="Pausable/NavigationRegion3D/Node3D/StaticBody3D"]
shape = SubResource("BoxShape3D_o7tkx")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Pausable/NavigationRegion3D/Node3D/StaticBody3D"]
mesh = SubResource("BoxMesh_ceuaj")

[node name="Node3D4" type="Node3D" parent="Pausable/NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10.722, 0, 0)
metadata/_edit_group_ = true

[node name="StaticBody3D" type="StaticBody3D" parent="Pausable/NavigationRegion3D/Node3D4"]
collision_layer = 15

[node name="CollisionShape3D" type="CollisionShape3D" parent="Pausable/NavigationRegion3D/Node3D4/StaticBody3D"]
shape = SubResource("BoxShape3D_o7tkx")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Pausable/NavigationRegion3D/Node3D4/StaticBody3D"]
mesh = SubResource("BoxMesh_ceuaj")

[node name="Node3D2" type="Node3D" parent="Pausable/NavigationRegion3D"]
transform = Transform3D(7.50389, -0.373765, 0, 3.02385, 0.927523, 0, 0, 0, 2.29605, 23.8854, 2.98969, 0)
metadata/_edit_group_ = true

[node name="StaticBody3D" type="StaticBody3D" parent="Pausable/NavigationRegion3D/Node3D2"]
collision_layer = 15

[node name="CollisionShape3D" type="CollisionShape3D" parent="Pausable/NavigationRegion3D/Node3D2/StaticBody3D"]
shape = SubResource("BoxShape3D_o7tkx")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Pausable/NavigationRegion3D/Node3D2/StaticBody3D"]
mesh = SubResource("BoxMesh_ceuaj")

[node name="Node3D3" type="Node3D" parent="Pausable/NavigationRegion3D"]
transform = Transform3D(5.98754, 0, 0, 0, 3.98527, 0, 0, 0, 4.75523, 43.5254, 2.92489, 0)
metadata/_edit_group_ = true

[node name="StaticBody3D" type="StaticBody3D" parent="Pausable/NavigationRegion3D/Node3D3"]
collision_layer = 15

[node name="CollisionShape3D" type="CollisionShape3D" parent="Pausable/NavigationRegion3D/Node3D3/StaticBody3D"]
shape = SubResource("BoxShape3D_o7tkx")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Pausable/NavigationRegion3D/Node3D3/StaticBody3D"]
mesh = SubResource("BoxMesh_ceuaj")

[node name="MainScreenUI" parent="Pausable" instance=ExtResource("6_tx08o")]

[node name="WhenPaused" type="Node" parent="."]
process_mode = 2

[node name="PauseMenu" parent="WhenPaused" instance=ExtResource("6_wypbr")]
visible = false

[connection signal="paused" from="." to="Pausable/MainScreenUI" method="_on_paused"]
[connection signal="health_changed" from="Pausable/Player" to="Pausable/MainScreenUI" method="my_health_changed"]
[connection signal="max_health_changed" from="Pausable/Player" to="Pausable/MainScreenUI" method="my_max_health_changed"]
[connection signal="zero_health" from="Pausable/Player" to="." method="_player_died"]
[connection signal="health_changed" from="Pausable/Enemy" to="Pausable/MainScreenUI" method="boss_health_changed"]
[connection signal="max_health_changed" from="Pausable/Enemy" to="Pausable/MainScreenUI" method="boss_max_health_changed"]
[connection signal="zero_health" from="Pausable/Enemy" to="." method="_boss_died"]
[connection signal="button_up" from="WhenPaused/PauseMenu/VBoxContainer/Continue" to="." method="_on_continue_button_up"]
[connection signal="button_up" from="WhenPaused/PauseMenu/VBoxContainer/Options" to="." method="_on_options_button_up"]
[connection signal="button_up" from="WhenPaused/PauseMenu/VBoxContainer/MainMenu" to="." method="_on_main_menu_button_up"]

[editable path="WhenPaused/PauseMenu"]
